Fixed z-index of logo

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -9,6 +9,7 @@ header {
 	position: absolute;;
 	top: 0;
 	right: 40px;
+	z-index: 2;
 }
 
 .site-title {
